unpackaged/main/default/objects/LiveChatTranscript/fields/Chat_Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Chat_Duration_In_Minutes__c</fullName>
    <formula>IF((MOD((ChatDuration)/60,1)*60) &gt; 10,
TEXT(FLOOR( (ChatDuration)/60)) + &quot;:&quot; + TEXT( FLOOR(MOD((ChatDuration)/60,1)*60) ),
TEXT(FLOOR( (ChatDuration)/60)) + &quot;:0&quot; + TEXT( FLOOR(MOD((ChatDuration)/60,1)*60) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chat Duration (In Minutes)</label>
    <type>Text</type>
</CustomField>