unpackaged/main/default/objects/LiveChatTranscript/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>