unpackaged/main/default/objects/LiveChatTranscript/fields/Test_text__c.field-meta.xml
<CustomField>
    <fullName>Test_text__c</fullName>
    <label>Test text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>