unpackaged/main/default/objects/LiveChatTranscript/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>IF(MINUTE(TIMEVALUE(StartTime))&gt;44,TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:45-&#39;&amp;TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:00&#39;,
IF(MINUTE(TIMEVALUE(StartTime))&gt;29,TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:30-&#39;&amp;TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:45&#39;,
IF(MINUTE(TIMEVALUE(StartTime))&gt;14,TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:15-&#39;&amp;TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:30&#39;,
TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:00-&#39;&amp;TEXT(HOUR(TIMEVALUE(StartTime))-5)&amp;&#39;:15&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Text</type>
</CustomField>