unpackaged/main/default/objects/LiveChatTranscript/fields/Wait_Time_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time_In_Minutes__c</fullName>
    <formula>IF((MOD(( WaitTime )/60,1)*60) &gt; 10,
TEXT(FLOOR( (WaitTime )/60)) + &quot;:&quot; + TEXT( FLOOR(MOD((WaitTime )/60,1)*60) ),
TEXT(FLOOR( (WaitTime )/60)) + &quot;:0&quot; + TEXT( FLOOR(MOD((WaitTime )/60,1)*60) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting</inlineHelpText>
    <label>Wait Time (In Minutes)</label>
    <type>Text</type>
</CustomField>