unpackaged/main/default/objects/LiveChatTranscript/listViews/ADC_Chat_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>ADC_Chat_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>ADC Chat</label>
    <queue>ADC_Chat</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>