unpackaged/main/default/objects/LiveChatTranscript/listViews/AR_Chat_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>AR_Chat_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>AR Chat</label>
    <queue>AR_Chat</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>