unpackaged/main/default/objects/LiveChatTranscript/listViews/C_More_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>C_More_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>C-More</label>
    <queue>C_More</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>