unpackaged/main/default/objects/LiveChatTranscript/listViews/Chat_Agents_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Chat_Agents_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat Agents</label>
    <queue>Chat_Agents</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>