unpackaged/main/default/objects/LiveChatTranscript/listViews/CX_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CX_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>Contact</columns>
    <columns>Account</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>CX</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>