unpackaged/main/default/objects/LiveChatTranscript/listViews/Nick_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Nick_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Nick</label>
    <queue>Nick</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>