unpackaged/main/default/objects/LiveChatTranscript/listViews/Technical_Support_Queue_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Technical_Support_Queue_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical Presales Queue</label>
    <queue>Technical_Presales_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>